P0-1：智能配煤结果增加 FEASIBLE / RISKY / INFEASIBLE 分级机制 P0-2：不可行原因和风险原因结构化返回，并在前端核心展示 P0-3：多目标评分支持 BALANCED / QUALITY_FIRST / COST_FIRST / INVENTORY_FIRST 四种策略 P0-4：候选方案增加 Pareto 非支配排序，返回 paretoRank 和多目标坐标 P0-5：候选方案搜索空间配置化，并在前端提供高级参数入口 P0-6：前端智能配煤页面升级为“决策驾驶舱”